[project]
name = "vr-game-data-analysis"
version = "0.1.0"
description = "VR game data analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "polars>=1.0",
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
    "streamlit>=1.30",
    "jupyter>=1.0",
    "ipykernel>=6.28",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pandera>=0.31.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
